# pipecat-upliftai-tts

./: .env.example  .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml  requirements.txt
src/pipecat_upliftai/: __init__.py  tts.py
